feat:单测补充，jacoco分支、行覆盖率90%